--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -96,11 +96,11 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-.bg-image {
+/* .bg-image {
   background-image: url('https://s3-alpha-sig.figma.com/img/644e/27b5/6dc86e3bdbcd317d806ea259c0f46865?Expires=1744588800&Key-Pair-Id=APKAQ4GOSFWCW27IBOMQ&Signature=teZ6xbhsuXwl2hGhQ1MTuqa2ZzGPoGbbBHIfwIT2B95BQJlh4RFjVIvsFxAV35DOCRl2Wf992Q-wVjvAvgo5oUaGnUEQhrH3M~6JLEJhdunVNfo3sIs0mtnoujErDCAh8xYr-ORFMW~oVDfcGoGBTltCX1JrRkT-c0isEXTdnslf198bW6aPHXfxTVvwRKcBNOPZebjCO~8ETJSZZF~qEp1dArpJdDkfzLGKmEkeMsZX4qvZ6xEqxTsGjnytmgLUShVeocV-0de0-OeZBdLVgZnnlZgNuWBFdKqdSsxvbaBad~OACqs6t5G0u6v26IbBt0DFuDX66Y2~7rS9WLz~dQ__');
   background-size: cover;
   background-position: center;
-}
+} */
 
 .dark {
   --background: oklch(0.145 0 0);
